# evolution_KG

./: .gitignore  AGENTS.md  README.md  disease_job.sh  job.sh  pyproject.toml  quick_job.sh  random_job.sh  requirements.txt  update.md
baselines/: full_embed.py  khop.py  random_walk.py  shortest_paths.py
embeddings/: export_embeddings.py  train_pykeen.py
eval/: metrics.py  robustness.py  viz.py
evolution/: evolve.py  operators.py  representation.py
features/: featurize.py  path_features.py
kg/: graph.py  schema.py
models/: classifier.py  train.py
retrieval/: candidate_pool.py  constraints.py
scripts/: build_triples.py  download_hetionet.py  make_case_studies.py  make_splits.py  run_experiments.py
tests/: test_operators.py  test_pipeline.py  test_run_experiments.py  test_workflow_helpers.py
tests/.mpl-cache/: fontlist-v330.json
