[project]
name = "evolutionary-subgraph"
version = "0.1.0"
description = "Proof-of-concept for evolutionary explanations on Hetionet."
authors = [
  { name = "Codex CLI", email = "codex@example.com" }
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "networkx",
    "torch",
    "pykeen",
    "matplotlib",
    "tqdm",
    "joblib",
]
[tool.setuptools]
packages = ["evolution"]

